# Planning_and_Control

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/control/: CMakeLists.txt  package.xml
src/control/controller/: CMakeLists.txt
src/control/controller/common/: common.h
src/control/controller/include/: controller.h  kinematic_model.h  lqr_controller.h  pid_controller.h
src/control/controller/src/: README.md  common.cpp  controller.cpp  kinematic_model.cpp  lqr_controller.cpp
src/planning/global_routing/: CMakeLists.txt
src/planning/global_routing/include/: ReferenceLine_Split.h  fem_pos_deviation_smoother.h  global_path_data.h  global_routing.h
src/planning/global_routing/src/: ReferenceLine_Split.cpp  fem_pos_deviation_ipopt_interface.cpp  fem_pos_deviation_osqp_interface.cpp  fem_pos_deviation_smoother.cpp  fem_pos_deviation_sqp_osqp_interface.cpp  global_routing.cpp  global_routng_node.cpp
src/planning/local_planning/: CMakeLists.txt
src/vehicle_simulation/: launch.md
src/vehicle_simulation/vehicle_description/: CMakeLists.txt
src/vehicle_simulation/vehicle_description/launch/: default.launch  estima_black.launch  estima_gray.launch  estima_white.launch  lexus.launch  milee.launch
src/vehicle_simulation/vehicle_description/urdf/: default.urdf  estima_black.urdf  estima_gray.urdf  estima_white.urdf  lexus.urdf  milee.urdf
src/vehicle_simulation/vehicle_state/: CMakeLists.txt  README.md  package.xml
src/vehicle_simulation/vehicle_state/config/: demo_car.rviz
src/vehicle_simulation/vehicle_state/launch/: vehicle_simulation.launch
src/vehicle_simulation/vehicle_state/src/: base_ros_Marker.md  base_ros_odometry.md  vehicle_state.cpp
纵向控制算法/PID/: README.md
